# sentinel-ai

./: .gitignore  README.md  REPORT.md  app.py  docker-compose.yml  pyproject.toml
scripts/: build_chroma_db.py  train_classifier.py
static/: app.js  index.html  styles.css
utils/: __init__.py  cache.py  reg.py  sanitizer.py  security_model.py  vector_db.py
