[project]
name = "sentinel-ai"
version = "0.1.0"
description = "LLM Safety Gateway"
requires-python = ">=3.13"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-dotenv",
    "transformers-interpret",
    "transformers",
    "torch",
    "sentence-transformers",
    "nltk",
    "spacy",
    "rapidfuzz",
    "chromadb",
    "openai",
    "pandas",
    "datasets",
    "evaluate",
    "scikit-learn",
    "redisvl",
    "redis[hiredis]",
    "en-core-web-sm",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
